2002-03-15  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm2.1:
	Removed matrix xft specification doc as now it is use internally by
	fvwm

	* libs/Flocale.c (FlocaleRotateDrawString):
	(FlocaleUnloadFont):
	(FlocaleDrawString):
	(FlocaleTextWidth):
	* libs/Fft.h: 
	* libs/Fft.c (FftGetRotatedFont): 
	(FftGetFont):
	(FftDrawString):
	(FftTextWidth):
	* fvwm/borders.c (DrawMultiPixmapTitlebar):
	(RedrawTitle): 
	* fvwm/geometry.c (get_title_font_size_and_offset): 
	* fvwm/style.c (parse_and_set_window_style):
	(check_window_style_change):
	* fvwm/update.c (apply_window_updates):
	* fvwm/update.h:
	* fvwm/style.h:
	* fvwm/fvwm.h:
	* fvwm/window_flags.h:
	Implemented vertical text rendering, new style SideTitleTextDefault,
	SideTitleTextTopToBottom, SideTitleTextBottomToTop

2002-03-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/gravity.c (ParseDirectionArgument):
	fixed direction parsing

	* fvwm/menus.c (get_menu_options):
	fixed a compiler warning

2002-03-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/bindings.c (ParseBinding):
	fixed compiler warning

	* fvwm/ewmh_events.c (EWMH_GetIconGeometry):
	* fvwm/ewmh.h:
	fixed compilation w/ --disable-ewmh

	* fvwm/windowlist.c (CMD_WindowList):
	fixed parsing of conditions versus position of window list broken with
	a recent "fix"

2002-03-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Fft.h:
	* libs/Fft.c (FftTextWidth):
	(is_utf8_encoding):
	(FftGetFontWidths):
	(FftDrawString):
	removed the HAVE_XFT_UTF8 ifdefs and fixed not setting FftUtf8Support
	if HAVE_XFT was not set.

	* fvwm/events.h (XEVMASK_DECORW):
	select EnterNotify and LeaveNotify on frame instead of decor_w

	* fvwm/add_window.c (setup_title_window):
	(setup_button_windows):
	(setup_resize_handle_windows):
	frame window is the new parent of the title, button and handle windows
	(setup_frame_stacking):
	new stacking order of decoration windows

	* fvwm/menuitem.c (menuitem_paint):
	* fvwm/events.c (HandleExpose):
	xft fixes
